# lidar1

./: README.md
src/lidar_localization/: .gitignore  CMakeLists.txt  README.md  package.xml
src/lidar_localization/cmake/: PCL.cmake  global_defination.cmake
src/lidar_localization/config/front_end/: config.yaml
src/lidar_localization/include/lidar_localization/front_end/: front_end.hpp
src/lidar_localization/include/lidar_localization/models/registration/: vgicp_registration.hpp
src/lidar_localization/include/lidar_localization/models/registration/tools/: fast_gicp.hpp  fast_vgicp.hpp  fast_vgicp_voxel.hpp
src/lidar_localization/include/lidar_localization/sensor_data/: gnss_data.hpp
src/lidar_localization/launch/: front_end.launch  front_end_xiaoxin.launch  launch可能遇到的问题  launch可能遇到的问题~  test_frame.launch  test_frame_xiaoxin.launch
src/lidar_localization/rviz/: test_frame.rviz
src/lidar_localization/slam_data/key_frames/: key_frame_180.pcd  key_frame_181.pcd  key_frame_182.pcd  key_frame_183.pcd  key_frame_184.pcd  key_frame_185.pcd  key_frame_186.pcd  key_frame_187.pcd  key_frame_188.pcd  key_frame_189.pcd  key_frame_190.pcd  key_frame_191.pcd  key_frame_192.pcd  key_frame_193.pcd  key_frame_194.pcd  key_frame_195.pcd  key_frame_196.pcd  key_frame_197.pcd  key_frame_198.pcd  key_frame_199.pcd  key_frame_200.pcd  key_frame_201.pcd  key_frame_202.pcd  key_frame_203.pcd  key_frame_204.pcd  key_frame_205.pcd  key_frame_214.pcd  key_frame_215.pcd  key_frame_216.pcd  key_frame_217.pcd  key_frame_218.pcd  key_frame_219.pcd  key_frame_220.pcd  key_frame_221.pcd  key_frame_279.pcd  key_frame_287.pcd  key_frame_288.pcd  key_frame_289.pcd  key_frame_290.pcd  key_frame_291.pcd  (+36 more)
src/lidar_localization/slam_data/local_maps/: local_map_1.pcd  local_map_2.pcd
src/lidar_localization/slam_data/trajectory/: ground_truth.txt  laser_odom.txt
src/lidar_localization/src/: test_frame_node.cpp  test_frame_node.cpp~
src/lidar_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
src/lidar_localization/src/models/cloud_filter/: voxel_filter.cpp
src/lidar_localization/src/models/registration/: vgicp_registration.cpp
src/lidar_localization/src/models/registration/tools/: fast_gicp.cpp  fast_vgicp.cpp  lsq_registration.cpp
src/lidar_localization/src/nodes/: front_end_node.cpp  test_frame_node.cpp
